feat: generalize waitTasksToBeDone(int, TimeUnit) for all tasks managers #1598